Final study completed

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ WeatherPy/__pycache__/api_key.cpython-39.pyc
 WeatherPy/.ipynb_checkpoints/WeatherPy-checkpoint.ipynb
 WeatherPy/api_key.py
 WeatherPy/WeatherPy starter code.ipynb
+WeatherPy/.ipynb_checkpoints/WeatherPy-checkpoint.ipynb
+WeatherPy/api_key.py
+WeatherPy/WeatherPy starter code.ipynb
